overflow issue fixed

--- a/css/globalStyle.scss
+++ b/css/globalStyle.scss
@@ -1,7 +1,7 @@
 * {
   box-sizing: border-box;
 }
-body {
+html,body {
   overflow-x: hidden;
 }
 @font-face {
